--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,2 +1,5 @@
 @import './sidebarhome.scss';
 @import './header.scss';
+@import './account/banner.scss';
+@import './account/content.scss';
+@import './custom-antd-tab.scss';
