--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -60,7 +60,7 @@
       width: calc(100% - 4.625rem);
     }
 
-    width: calc(100% - 74px);
+    // width: calc(100% - 74px);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -120,4 +120,10 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--Lighter);
+}
+.ant-dropdown{
+  .ant-dropdown-menu-title-content{
+    width: 100%;
+    display: block;
+  }
 }
