update upload avatar

--- a/src/styles/components/account/banner.scss
+++ b/src/styles/components/account/banner.scss
@@ -22,6 +22,17 @@
                 padding-left: 1rem;
                 color: black;   
                 .username{
+                    .right{
+                        padding-left:1rem;
+                        display: flex;
+                        flex-direction: column;
+                        .id{
+                            font-weight: 500;
+                            font-size: 17px;
+                        }
+                    }
+                    display: flex;
+                    align-items: center;
                     font-weight: 600;
                     font-size: 26px;
                 }
