--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
 @import "./pages/home.scss";
 @import './components/index.scss';
 @import './pages/index.scss';
+@import "react-toastify/dist/ReactToastify.css";
 
 @import './responsive.scss';
 
