--- a/src/styles/components/account/content.scss
+++ b/src/styles/components/account/content.scss
@@ -36,3 +36,10 @@
 
     }
 }
+.content-component-2{
+    .header{
+        padding-bottom: 1rem;
+        display: flex;
+        justify-content: space-between;
+    }
+}
